--- a/ananya.html
+++ b/ananya.html
@@ -16,7 +16,7 @@
     <style>
         body {
             font-family: 'Special Elite', cursive;
-            background:url(star.png);
+            background:url(STAR.jpg);
             color: #222;
         }
 
@@ -81,11 +81,19 @@
     <!-- Old Paper Content -->
     <section class="old-paper">
         <h2>About</h2>
+        <img src="M.png"
+            style="float: right; margin: 10px 0 10px 20px; width: 250px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.5);">
         <p>
-            Dr. Ananya Sharma is a <span class="highlight-red">child psychologist</span> with over 15 years of
-            experience
-            in cognitive and emotional development. She specializes in the effects of digital media on children and
-            adolescents.
+            Dr. Ananya Sharma previously has a degree in applied psychology from Tata Institute of Social Sciences, Mumbai. She got
+            her Honours degree in psychology from Delhi University and specializes in offering mental health care for children and
+            people (ages from 8 to 25) focusing on common issues among children and young adults. She is trained in approaches like
+            Narrative Therapy, Solution focused brief therapy and more.
+            According to her view, the rise of the shortform digital content such as youtube shorts, tiktoks etc contributed to the
+            rise of a term that's called '' brainot''. This phenomenon significantly affects the younger people in India by
+            influencing their attention spans, process, mental health, as well as cultural views. Her study involves the process and
+            impacts of brainrot on Indian youth using mixed methodology, including surveys, interviews and content analysis. Her
+            findings show a strong association between extended screentime and short attention span, procrastination, anxiety etc.
+
         </p>
 
         <h2 class="mt-4">View on Brainrot</h2>
@@ -100,12 +108,6 @@
             <li>Increased anxiety and restlessness</li>
         </ul>
 
-        <h2 class="mt-4">Education & Credentials</h2>
-        <p>
-            <strong>PhD in Child Psychology</strong> – University of Delhi <br>
-            <strong>M.A. in Clinical Psychology</strong> – Tata Institute of Social Sciences <br>
-            <strong>B.A. Psychology</strong> – Delhi University
-        </p>
 
         <h2 class="mt-4">Contact & Resources</h2>
         <p>
