slider not working

--- a/BRC.html
+++ b/BRC.html
@@ -67,6 +67,15 @@
             border-radius: 4px;
         }
 
+        #slider {
+            max-width: 600px;
+            margin: 30px auto;
+        }
+
+        .carousel-inner img {
+            height: 300px;
+            object-fit: cover;
+        }
     </style>
 </head>
 
@@ -74,36 +83,231 @@
 
     <!-- Header -->
     <header>
-        <h1>Dr. Fabeha Syed</h1>
-        <p class="lead">PhD, Internet Linguistics</p>
+        <h1>Brainrot Characters</h1>
+        <p class="lead">origin, meaning & translation</p>
     </header>
 
     <!-- Old Paper Content -->
     <section class="old-paper">
         <h2><u>Brainrot Characters</u></h2>
         <p>
-            <!-- 👇 Image -->
-            <img src="t.jpg"
-                style="float: right; margin: 10px 0 10px 20px; width: 250px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.5);">
 
-            <strong>(add br charac name) </strong> ....
 
         </p>
 
         <p>
-            ...
-
         </p>
 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-        <h2 class="mt-4"><u>Contact & Resources</u></h2>
-        <p>
-            Learn more about Dr. Fabeha Syed's work and publications:
-        </p>
-        <a href=" https://www.youtube.com/watch?v=arUqlV4gsVY
-" target="_blank" class="btn btn-primary">Watch Her Video</a>
-        <br>
-        <a href="index.html" class="btn-back">⬅ Back to Main Page</a>
+        <div id="slider" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <p><strong>Tung Tung Tung Sahur</strong> is an Indonesian brainrot character made by Noxa, an
+                        Indonesian tiktoker who created several
+                        different Italian brainrot characters alongside AI videos. Tung Tung Tung Sahur is a log who
+                        wields a baseball bat as a
+                        weapon who was pubished on the 1st of March, 2025. The word “Tung” represents the beat of a
+                        kentongan, which is a
+                        traditional Indonesian communication tool made from hollowed-out bamboo or wood, struck with a
+                        mallet to produce loud
+                        sounds for local alerts. And the word “Sahur” also written as Sahoor is an islamic tradition in
+                        which Muslims wake up at
+                        dawn before sun rises on the days of Ramadan, to prepare for the fast. So the meaning behind
+                        this character was to wake
+                        up the muslims at a proper time so they can carry out sahur.
+                        It’s an abnormal creature that appears during Sahur. It’s said that if someone is called for
+                        sahur three times and does
+                        not answer, then this creature will come to your house.</p>
+                    <img src="t.jpg"
+                        style="float: right; margin: 10px 0 10px 20px; width: 250px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.5);">
+
+                    <p> <strong>Abilities :</strong> Superhuman Physical Characteristics
+                        Inorganic Physiology (Tung Tung Tung Sahur is an "anomaly" that resembles a humanoid night
+                        patrol drum)
+                        Teleportation, possibly Resurrection (Low-Godly; During his fight with Brr Brr Patapim, he was
+                        able to escape his trap,
+                        although, it's debatable if he came back with an unknown teleportation ability, or if he came
+                        back to life)
+                        Telekinesis (Able to telekinetically pull his own bat)
+                        Body Control and Transformation (Has been shown to be able to shapeshift his body, turning even
+                        bigger in his Second
+                        Form)</p>
+
+                    <p> <strong>Translation :
+                            <q>Tung tung tung tung tung tung tung tung tung sahur. A terrifying anomaly that only comes
+                                out at Sahoor. It is said
+                                that if someone is called for Sahoor three times and does not answer, then this creature
+                                comes to your house. Ooh,
+                                so
+                                scary! This tung tung usually makes a sound like a gong hitting a baton; Tung tung tung
+                                tung. Share it with your
+                                friends
+                                who find it difficult to wake up for Sahoor.</q>
+                        </strong> </p>
+
+
+                    Since then, the Tung Tung Tung Sahur trend has absolutely exploded across TikTok. Creators
+                    everywhere are putting their
+                    own spin on it: recreating the sound, remixing the audio, and animating a host of AI characters
+                    using the iconic chant.
+                    The Tung Tung Tung Sahur filter has only added to the meme magic, making participation in the trend
+                    a creative badge of
+                    honor on the platform. People have also made stories out of this character showing how this has
+                    become a huge part of
+                    our writings.
+
+                </div>
+                <div class="carousel-item">
+                    <p><strong>Bombardiro Crocodilo</strong> is a military bomber with the head of a crocodile
+                        superimposed, created by a tiktok user on
+                        February 20th,2025. Bombardiro Crocodilo has reached very high levels of popularity, becoming
+                        the 5th most popular
+                        character in the universe. It quickly gained the status of a fan-favorite creature, often being
+                        put in the highest spots
+                        in user-generated rankings.
+                    </p>
+                    <img src="5f9f8b58ce45ff9e83888eefad39a4a2.jpg"
+                        style="float: right; margin: 10px 0 10px 20px; width: 250px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.5);">
+
+
+                    <p> <strong>Translation :
+                            <q>Bombardiro Crocodilo, a [CENSORED] flying alligator, who flies and [CENSORED]. He doesn’t
+                                believe in Allah and he loves
+                                bombs. He feeds on the spirit of your mother. And if you translated all that, then
+                                you’re an [CENSORED] . Don’t break
+                                the joke, [CENSORED].</q>
+                        </strong> </p>
+
+
+                    However, it has also sparked controversy regarding its narration. Viewers have deemed lines such as
+                    "Non crede in Allah"
+                    and "bombarda i bambini a Gaza e in Palestina" offensive, as it is perceived to mock the military
+                    conflict in Gaza.
+                    Despite this, this brainrot has inspired a significant amount of spin-off brainrots, which is a
+                    goose superimposed on a
+                    bomber plane, with some of these having achieved mainstream recognition. In late 2025, Bombardiro
+                    Crocodilo was removed
+                    from the Roblox game Plants vs Brainrots due to an unknown reason. However, fans of the game have
+                    speculated online it
+                    could be due to copyright, however this is just a claim.
+
+                </div>
+
+                <div class="carousel-item">
+                    <p><strong>Tralalero Tralala</strong> sometimes is the first and one of the popular Italian
+                        brainrot characters. It looks like a shark, has
+                        side fins that look like legs, it has three feet and he wears blue Nike shoes on them. It is
+                        usually in a beach setting.
+                        There are sea waves and seagulls behind Tralalero Tralala. The whole trend started on TikTok
+                        earlier this year. Some guy
+                        made a short video with this weird AI audio saying “Tralalero Tralala,” and then paired it
+                        with an image of the shark.
+                        And for some reason, the internet just ran with it.
+
+                    </p>
+                    <img src="s.webp"
+                        style="float: right; margin: 10px 0 10px 20px; width: 250px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.5);">
+
+                    <p> While some people say that Tralalero Tralala is a whimsical, melodic expression rooted in
+                        folk singing and widely used
+                        as a fun, meaningless filler in songs and speech. Whether you encounter it in Italian
+                        polyphonic music or in a casual
+                        online meme, the essence of the phrase is playfulness, rhythm, and carefree joy rather than
+                        literal meaning. The
+                        translation however has a whole different meaning.</p>
+
+
+                    <p> <strong>Translation :
+                            <q>Tralalero Tralala, [CENSORED] God and [CENSORED] Allah. I was with my [CENSORED] son
+                                playing Fortnite, when all of a
+                                sudden my grandma came in.
+                            </q>
+                        </strong> </p>
+                </div>
+
+                <div class="carousel-item">
+                    <p><strong>Ballerina Cappuccina</strong> is an Italian brainrot character introduced on the 19th of
+                        March, 2025 by a TikTok user. She can
+                        usually be seen dancing or singing. In an older meme, she could be seen pirouetting gracefully,
+                        and she is one of the
+                        first Italian brainrots. Ballerina Cappuccina sits among the most well-known characters of
+                        Italian Brainrot, with the
+                        most popular video having reached over 50 million views on TikTok. Many stories and additional
+                        characters (including
+                        characters like Ballerino Lololo) have been created thanks to her, many of which have gained
+                        mainstream recognition.
+
+
+                    </p>
+                    <img src="bc.jpeg"
+                        style="float: right; margin: 10px 0 10px 20px; width: 250px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.5);">
+
+
+
+                    <p> <strong>Translation :
+                            <q>Ballerina Cappuccina, mi mi mi mi!
+                                She is the wife of Cappuccino Assassino
+                                And she loves music, la la la la!
+                                Her passion is Ballerino Lololo
+
+                            </q>
+                        </strong> </p>
+                    <p> She sometimes appears to be sweet and shy, but other times she’s shown as scary or evil.
+                        Ballerina Cappuccino is
+                        sometimes said to be married to Cappuccino Assassino, another Italian Brainrot character.
+                    </p>
+                </div>
+
+
+                <div class="carousel-item">
+                    <p><strong>Lirilì Larilà</strong> is a well-known Italian Brainrot Character published on the 10th of February, 2025. He is a two-legged
+                    elephant with a cactus body and two slippers. Appears in the desert with something resembling hot air balloons or
+                    seashells and a floating alarm clock in the background. It wanders the desert with a floating tiny mystical clock.
+                    Instead of elephant feet, Lirili's two legs end in oversized beach slippers. According to Fictional Stories, Lirilì
+                    Larilà can grow up to 15-18 feet tall.
+
+
+
+                    </p>
+                    <img src="ll.avif"
+                        style="float: right; margin: 10px 0 10px 20px; width: 250px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.5);">
+
+
+
+                    <p> <strong>Translation :
+                            <q>Lirilì Larilà, elephant in the desert walking here and there. Wearing sandals and a clock that goes tick tack, the
+                            cactus' spines give me a flashback attack. Uncle Ramon arrives on a blue hot air balloon, yelling: "What are you doing
+                            here? You even like Wi-Fi, you?" I answer, breathless: "I'm just trying to understand why a cactus with sandals can also
+                            dress up!"
+
+
+                            </q>
+                        </strong> </p>
+                    <p> He is often cited to have the ability to control time through the alarm clock. This makes him have a powerful
+                    performance in battle, even defeating Tung Tung Tung Sahur. He has also been able to defeat characters like Cappuccino
+                    Assassino by just stomping him with his giant feet/sandals. Lirilì Larilà wanders the desert in eternal search of water
+                    and attention. This bizarre creature is essentially a giant living cactus with the head of an elephant, complete with
+                    floppy ears and a tiny trunk. Instead of elephant feet, Lirili's two legs end in oversized beach slippers.
+
+                    </p>
+                </div>
+
+
+
+            </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#slider" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#slider" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+        </div>
+
+
+
     </section>
 
     <!-- Bootstrap JS -->
