--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                 how repeated exposure to persuasive media or online echo chambers can shape beliefs and
                                 reduce independent critical
                                 thinking.</p>
-                            <a href="pychologist3.html" target="_blank" class="btn btn-danger"> Visit Website </a>
+                            <a href="phycologist3.html" target="_blank" class="btn btn-danger"> Visit Website </a>
                         </div>
                     </div>
                 </div>
@@ -292,12 +292,12 @@
                 <div class="col-md-4">
                     <div class="card h-100 shadow-sm">
                         <div class="card-body">
-                            <h5 class="card-title">Dr. Rajiv Mehta</h5>
+                            <h5 class="card-title">Dr. Karyne Messina</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Medical Doctor & Behavioral Psychologist</h6>
                             <p class="card-text">He relates brainrot to social media echo chambers, where
                                 algorithm-driven content strengthens extreme views and limits
                                 exposure to diverse perspectives.</p>
-                            <a href="phycologist2" target="_blank" class="btn btn-danger"> Visit Website </a>
+                            <a href="phycologist2.html" target="_blank" class="btn btn-danger"> Visit Website </a>
                         </div>
                     </div>
                 </div>
@@ -321,7 +321,7 @@
     </section>
 
     <section class="old-paper psych-section">
-        <div class="row g-4">
+        <div class="row g-5 gy-5">
             <!-- Card 1 -->
             <div class="col-md-4">
                 <div class="card custom-card h-100 shadow-sm">
@@ -336,14 +336,12 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="row g-4">
+       
             <!-- Card 1 -->
             <div class="col-md-4">
                 <div class="card custom-card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">The origin of brainrot Characters</h5>
+                        <h5 class="card-title">The origin of Brainrot Characters</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Brainrot characters are usually ainamted or edited
                             characters which repeat random sounds or chants with no real meaning. They are only made to
                             be catchy, weird and stuck in your head.</h6>
@@ -378,11 +376,11 @@
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Fight the Brainrot</h5>
+                        <h5 class="card-title">Escape the Brainrot!!</h5>
                         <img src="iiii.png" alt="Brainrot Logo" width="300" style="vertical-align: middle;">
                         <h6 class="card-subtitle mb-2 text-muted">...</h6>
                         <p class="card-text">tell about the game</p>
-                        <a href="ER.html" class="btn btn-danger"> Visit Website </a>
+                        <a href="https://scratch.mit.edu/projects/1224513994/fullscreen/" class="btn btn-danger"> Visit Website </a>
                     </div>
                 </div>
             </div>
@@ -390,12 +388,12 @@
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">Fight The Brainrot</h5>
+                        <h5 class="card-title">Fight The Brainrot!!</h5>
                         <img src="bg.png" alt="Brainrot Logo" width="300" style="vertical-align: middle;">
 
                         <h6 class="card-subtitle mb-2 text-muted">...</h6>
                         <p class="card-text">tell about the game</p>
-                        <a href="pychologist3" target="_blank" class="btn btn-danger"> Visit Website </a>
+                        <a href="https://scratch.mit.edu/projects/1269062315/fullscreen/" target="_blank" class="btn btn-danger"> Visit Website </a>
                     </div>
                 </div>
             </div>
@@ -405,7 +403,7 @@
     <!-- CTA Comic Book -->
     <section class="cta">
         <p class="mb-3">Want to learn more in a fun way?</p>
-        <a href="#">Check Out Our Comic Book!</a>
+        <a href="cb.html">Check Out Our Comic Book!</a>
     </section>
 
     <!-- Bootstrap JS -->
