--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Escape the Brainrot!!</h5>
                         <img src="iiii.png" alt="Brainrot Logo" width="300" style="vertical-align: middle;">
-                        <h6 class="card-subtitle mb-2 text-muted">...</h6>
-                        <p class="card-text">tell about the game</p>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                        
                         <a href="https://scratch.mit.edu/projects/1224513994/fullscreen/" class="btn btn-danger"> Visit Website </a>
                     </div>
                 </div>
@@ -391,8 +391,8 @@
                         <h5 class="card-title">Fight The Brainrot!!</h5>
                         <img src="bg.png" alt="Brainrot Logo" width="300" style="vertical-align: middle;">
 
-                        <h6 class="card-subtitle mb-2 text-muted">...</h6>
-                        <p class="card-text">tell about the game</p>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                        
                         <a href="https://scratch.mit.edu/projects/1269062315/fullscreen/" target="_blank" class="btn btn-danger"> Visit Website </a>
                     </div>
                 </div>
